@@ -1,3 +1,9 @@
+2001-08-13  Michael Meeks  <michael@ximian.com>
+
+	* gconf/gconf-internals.c: remove nano_sleep; it's unused.
+
+	* configure.in: remove nanosleep check.
+
 2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>
 
 	* configure.in: remove the chmod on gconf-config,
